--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Blog",
+  "name": "AkaLientesS",
   "version": "1.0.0",
-  "description": "Akalientess Blog",
+  "description": "AkaLientesS Portfolio",
   "main": "index.js",
   "scripts": {
     "prebuild": "npm-run-all --parallel",
