Add subpages skeleton and link the cards

--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,6 @@ disableKinds = ["section"]
 [permalinks]
     list-of-projects = "/:filename"
     pattern-library = "/:filename"
+    akali = "/:filename"
+    katarina = "/:filename"
+    yasuo = "/:filename"
