Fix not valid base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://akalientess.com/'
+baseURL = 'https://akalientess.com'
 relativeurls = true
 languageCode = 'en-us'
 title = 'AkaLientesS'
