--- a/assets/package.json
+++ b/assets/package.json
@@ -50,6 +50,8 @@
     "stylelint": "^13.13.1",
     "svgo": "^2.4.0",
     "terser-webpack-plugin": "^5.1.4",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.2",
     "webpack": "^5.50.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0"
